# ai_oracle

./: .gitignore  README.md  clear_rag.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  yoyo.ini
ai_oracle/: ai_camera_processing.py  camera_client.py  client.py  dbClient.py  email_client.py  image_processor.py  main.py  main_camera.py  motion_detection.py  rag_image_converter.py  rag_indexer.py  tplink_camera.py  ui_client.py  yolo_vision.py
migrations/: 0001_create_context_table.py  0002_create_event_log_tables.py  0003_add_image_data_columns.py  0004_add_date_columns.py
