[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_oracle"
version = "0.1.0"
description = "A Python project"
authors = [
    { name = "Author Name", email = "author@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "ollama>=0.3.0",
    "psycopg2-binary",
    "yoyo-migrations",
    "chromadb",
    "langchain-text-splitters"
]

[project.scripts]
ai-oracle = "ai_oracle.main:app"
ai_oracle = "ai_oracle.main:app"

[tool.setuptools]
packages = ["ai_oracle"]